--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Story</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Educational. Equity. For. All.</h1>
+							<p class="major">Place Holder: Something introducing our purpose(note: we are not an organization, the EEFA is just a slogan).<a href="https://ralphnortham.com/">Ralph Northam</a></p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images\Ralph-in-Gym.jpg" alt="" />
 						</div>
 					</section>
 
