--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Story by HTML5 UP</title>
+		<title>EEFA Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/Education-Icon.png">
 	</head>
 	<body>
 
@@ -19,14 +20,14 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Educational. Equity. For. All.</h1>
+							<h1>Educational Equity For All</h1>
 							<p class="major">Place Holder: Something introducing our purpose(note: we are not an organization, the EEFA is just a slogan).<a href="https://ralphnortham.com/">Ralph Northam</a>Join us as we fight for the greater for our children's future!</p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Join Us</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images\Ralph-in-Gym.jpg" alt="" />
+							<img src="images/Ralph-in-Gym.jpg" alt="" />
 						</div>
 					</section>
 
