--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Special thanks to HTML5 UP
 -->
 <html>
 	<head>
-		<title>EEFA Home</title>
+		<title>Educational Equity For All</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@ Special thanks to HTML5 UP
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Educational Equity For All</h1>
-							<p class="major">Place Holder: Something introducing our purpose(note: we are not an organization, the EEFA is just a slogan).<a href="https://ralphnortham.com/">Ralph Northam</a>Join us as we fight for the greater for our children's future!</p>
+							<h2 class="major">We come as <b>one</b> - to fight for our children's bright <strong>future</strong>.</h2>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Join Us</a></li>
 							</ul>
