--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@ Special thanks to HTML5 UP
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Educational Equity For All</h1>
-							<h2 class="major">We come as <b>one</b> - to fight for our children's bright <strong>future</strong>.</h2>
+							<div class="content">
+								<blockquote>Education is the passport to the future, for tomorrow belongs to those who prepare for it today. – Malcolm X</blockquote>	
+							</div>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Join Us</a></li>
 							</ul>
