--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Special thanks to HTML5 UP
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Educational Equity For All</h1>
-								<blockquote>Education is the passport to the future, for tomorrow belongs to those who prepare for it today. – Malcolm X</blockquote>	
+								<blockquote><b>Education is the passport to the future, for tomorrow belongs to those who prepare for it today. – Malcolm X</b></blockquote>	
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Join Us</a></li>
 							</ul>
