--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Special thanks to HTML5 UP
 							<h1>Educational Equity For All</h1>
 								<blockquote><b>Education is the passport to the future, for tomorrow belongs to those who prepare for it today. – Malcolm X</b></blockquote>	
 							<ul class="actions vertical">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Join Us</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">About EEFA</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -32,8 +32,9 @@ Special thanks to HTML5 UP
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in invert" id="first">
 						<div class="content">
-							<h2 style = "color:white;">Magna etiam feugiat</h2>
-							<p style = "color:white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2 style = "color:white;">Our Purpose</h2>
+							<p style = "color:white;">The EEFA is not an organization, but rather a slogan meant to unite parents and caretakers of students to defend our education system. As of right now, according to <a href = "https://www.usnews.com/news/best-states/rankings/education">USNews</a>, Virginia is top 10 in education in the U.S.
+								 However, this position is currently threatened by officials and candidates who want to change our schools. It is our duty to stand up to these threats protect our childrens future.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button special">Learn More</a></li>
 							</ul>
