--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Special thanks to HTML5 UP
 							<p style = "color:white;">The EEFA is not an organization, but rather a slogan meant to unite parents and caretakers of students to defend our education system. As of right now, according to <a href = "https://www.usnews.com/news/best-states/rankings/education">USNews</a>, Virginia is top 10 in education in the U.S.
 								 However, this position is currently threatened by officials and candidates who want to change our schools. It is our duty to stand up to these threats protect our childrens future.</p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button special">Learn More</a></li>
+								<li><a href="#second" class="button special">The Problem</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -45,9 +45,9 @@ Special thanks to HTML5 UP
 					</section>
 
 				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id = "second">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
+							<h2>The Current Issues</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
@@ -82,11 +82,11 @@ Special thanks to HTML5 UP
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
+									<a href="images\gallery\fulls\prince-county-event-full.png" class="image">
+										<img src="images\gallery\thumbs\Prince-county-event-thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
+										<h3>Prince William County GOTV Kickoff</h3>
 										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
