--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Special thanks to HTML5 UP
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images\gallery\fulls\prince-county-event-full.png" class="image">
-										<img src="images\gallery\thumbs\Prince-county-event-thumb.jpg" alt="" />
+										<img src="images\gallery\thumbs\prince-county-event-thumb.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Prince William County GOTV Kickoff</h3>
