--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@ Special thanks to HTML5 UP
 									</a>
 									<div class="caption">
 										<h3>Prince William County GOTV Kickoff</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<p>Wed. November 1st 7:30PM EDT</p>
 										<ul class="actions">
-											<li><span class="button small">Details</span></li>
+											<li><a href = "https://www.facebook.com/events/547502125584467/" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+									<a href="images\gallery\fulls\Loudan-county-event-full.jpg" class="image">
+										<img src="images\gallery\thumbs\Loudan-county-event-thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Loudoun County GOTV Kickoff</h3>
+										<p>Fri. November 3rd 8:00PM EDT</p>
 										<ul class="actions">
-											<li><span class="button small">Details</span></li>
+											<li><a href = "https://www.facebook.com/events/766398856878011/" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>
