--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ Special thanks to HTML5 UP
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id = "second">
 						<div class="content">
 							<h2>The Current Issues</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>The Trump Administration is threatening Virginia’s school by cutting our school spending budget in half. With Ed Gillespie, running for governor he is almost certain to comply with his fellow Republican and sign the legislation. Ed also plans to give “a tax giveaway for upper-income Virginians who send their children to private schools...”, as well as more funding for Charter Schools and reduce public school spendings.</p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#third" class="button">Consequences</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -59,7 +59,7 @@ Special thanks to HTML5 UP
 					</section>
 
 				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id = "third">
 						<div class="content">
 							<h2>Pharetra etiam nulla</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
