--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Special thanks to HTML5 UP
 							<h2>The Current Issues</h2>
 							<p>The Trump Administration is threatening Virginia’s school by cutting our school spending budget in half. With Ed Gillespie, running for governor he is almost certain to comply with his fellow Republican and sign the legislation. Ed also plans to give “a tax giveaway for upper-income Virginians who send their children to private schools...”, as well as more funding for Charter Schools and reduce public school spendings.</p>
 							<ul class="actions vertical">
-								<li><a href="#third" class="button">Consequences</a></li>
+								<li><a href="#third" class="button">The Consequences</a></li>
 							</ul>
 						</div>
 						<div class="image">
