--- a/index.html
+++ b/index.html
@@ -59,18 +59,21 @@ Special thanks to HTML5 UP
 					</section>
 
 				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id = "third">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in invert" id = "third">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2 style = "color:white;">So...</h2>
+							<p style = "color:white;">Many of us fail to realize Ed Gillespie's educational plan has major flaws and fall for his sweet words. His plan would result in less economically stable families being forced attend public schools that lack funding which would increase the education gap between wealthy and poor. Followed up by the budget cuts proposed by the Trump Administration, it would only take more opportunities away from our students to remediate which would be contradicting what he claims to do. We must realize that Ed Gillespie's pathway would only lead our school system to corruption.</p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#fourth" class="button special">The Solution</a></li>
 							</ul>
 						</div>
 						<div class="image">
 							<img src="images/spotlight03.jpg" alt="" />
 						</div>
 					</section>
+				
+				<!-- Fifth Section -->
+					
 
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
