--- a/index.html
+++ b/index.html
@@ -73,7 +73,19 @@ Special thanks to HTML5 UP
 					</section>
 				
 				<!-- Fifth Section -->
-					
+
+				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id = "fourth">
+					<div class="content">
+						<h2>Ralph Northam</h2>
+						<p><a href = "https://ralphnortham.com/">Ralph Northam</a> supports the educational equity of all of our children and will defend our schools from the threat of the Trump Administration and Gillespie’s majorly flawed plans. As governor, Ralph plans to help schools get newer resources and equipment in order to prepare our kids for the new generation of technology. Ralph, unlike Gillespie has much experience when it comes to children. As a former physician, U.S. Army veteran, Virginia State Senator, Lt. Governor, Ralph has managed to keep our education system in the top 10 in the U.S. for nearly 10 years now and will continue to improve our schools for the greater good.</p>
+						<ul class="actions vertical">
+							<li><a href="#fifth" class="button">What now?</a></li>
+						</ul>
+					</div>
+					<div class="image">
+						<img src="images/spotlight02.jpg" alt="" />
+					</div>
+				</section>
 
 				<!-- Five -->
 					<section class="wrapper style1 align-center">
