--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Special thanks to HTML5 UP
 							<p style = "color:white;">The EEFA is not an organization, but rather a slogan meant to unite parents and caretakers of students to defend our education system. As of right now, according to <a href = "https://www.usnews.com/news/best-states/rankings/education">USNews</a>, Virginia is top 10 in education in the U.S.
 								 However, this position is currently threatened by officials and candidates who want to change our schools. It is our duty to stand up to these threats protect our childrens future.</p>
 							<ul class="actions vertical">
-								<li><a href="#second" class="button special">The Problem</a></li>
+								<li><a href="#second" class="button special smooth-scroll-middle">The Problem</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -50,7 +50,7 @@ Special thanks to HTML5 UP
 							<h2>The Current Issues</h2>
 							<p>The Trump Administration is threatening Virginia’s school by cutting our school spending budget in half. With Ed Gillespie, running for governor he is almost certain to comply with his fellow Republican and sign the legislation. Ed also plans to give “a tax giveaway for upper-income Virginians who send their children to private schools...”, as well as more funding for Charter Schools and reduce public school spendings.</p>
 							<ul class="actions vertical">
-								<li><a href="#third" class="button">The Consequences</a></li>
+								<li><a href="#third" class="button smooth-scroll-middle">The Consequences</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -64,7 +64,7 @@ Special thanks to HTML5 UP
 							<h2 style = "color:white;">So...</h2>
 							<p style = "color:white;">Many of us fail to realize Ed Gillespie's educational plan has major flaws and fall for his sweet words. His plan would result in less economically stable families being forced attend public schools that lack funding which would increase the education gap between wealthy and poor. Followed up by the budget cuts proposed by the Trump Administration, it would only take more opportunities away from our students to remediate which would be contradicting what he claims to do. We must realize that Ed Gillespie's pathway would only lead our school system to corruption.</p>
 							<ul class="actions vertical">
-								<li><a href="#fourth" class="button special">The Solution</a></li>
+								<li><a href="#fourth" class="button special smooth-scroll-middle">The Solution</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -79,7 +79,7 @@ Special thanks to HTML5 UP
 						<h2>Ralph Northam</h2>
 						<p><a href = "https://ralphnortham.com/">Ralph Northam</a> supports the educational equity of all of our children and will defend our schools from the threat of the Trump Administration and Gillespie’s majorly flawed plans. As governor, Ralph plans to help schools get newer resources and equipment in order to prepare our kids for the new generation of technology. Ralph, unlike Gillespie has much experience when it comes to children. As a former physician, U.S. Army veteran, Virginia State Senator, Lt. Governor, Ralph has managed to keep our education system in the top 10 in the U.S. for nearly 10 years now and will continue to improve our schools for the greater good.</p>
 						<ul class="actions vertical">
-							<li><a href="#fifth" class="button">What now?</a></li>
+							<li><a href="#fifth" class="button smooth-scroll-middle">What now?</a></li>
 						</ul>
 					</div>
 					<div class="image">
