fairfax county event

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Special thanks to HTML5 UP
 				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id = "fourth">
 					<div class="content">
 						<h2>Ralph Northam</h2>
-						<p><a href = "https://ralphnortham.com/">Ralph Northam</a> supports the educational equity of all of our children and will defend our schools from the threat of the Trump Administration and Gillespie’s majorly flawed plans. As governor, Ralph plans to help schools get newer resources and equipment in order to provide our kids with the benefits of 21<sup>st</sup> century learning. Ralph, unlike Gillespie has much experience when it comes to children. As a former physician, U.S. Army veteran, Virginia State Senator, Lt. Governor, Ralph has managed to keep our education system in the top 10 in the U.S. for nearly 10 years now and will continue to improve our schools for the greater good.</p>
+						<p><a href = "https://ralphnortham.com/">Ralph Northam</a> supports the educational equity of all of our children and will defend our schools from the threat of the Trump Administration and Gillespie’s majorly flawed plans. As governor, Ralph plans to help schools get newer resources and equipment in order to provide our kids with the resources for 21<sup>st</sup> century learning. Ralph, unlike Gillespie has much experience when it comes to children. In the past, he has been part of the Chair of Commonwealth Council on Childhood Success and help imporved the classrooms of 13,000 students. Not only that, he has also managed to keep our education system in the top 10 in the U.S. for nearly 10 years now and will continue to improve our schools for the greater good.</p>
 						<ul class="actions vertical">
 							<li><a href="#fifth" class="button smooth-scroll-middle">What now?</a></li>
 						</ul>
@@ -121,14 +121,14 @@ Special thanks to HTML5 UP
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
-										<img src="images/gallery/thumbs/03.jpg" alt="" />
+									<a href="images/gallery/fulls/Fairfax-county-event-full.jpg" class="image">
+										<img src="images/gallery/thumbs/Fairfax-county-event-thumb.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Magna Amet</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Fairfax County GOTV Kickoff</h3>
+										<p>Sat. November 4th 7:00PM EDT</p>
 										<ul class="actions">
-											<li><span class="button small">Details</span></li>
+											<li><a href = "https://www.facebook.com/events/291389638034134/" class="button small">Details</a></li>
 										</ul>
 									</div>
 								</article>
@@ -241,7 +241,10 @@ Special thanks to HTML5 UP
 									</div>
 								</article>
 							</div>
-
+							
+							<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Take it from President <a href="https://twitter.com/BarackObama?ref_src=twsrc%5Etfw">@BarackObama</a>: Ralph&#39;s served Virginia his whole life. That&#39;s just who he is. <a href="https://t.co/dUeHQYPCUH">pic.twitter.com/dUeHQYPCUH</a></p>&mdash; Ralph Northam (@RalphNortham) <a href="https://twitter.com/RalphNortham/status/925825088167071744?ref_src=twsrc%5Etfw">November 1, 2017</a></blockquote>
+							<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+							
 					</section>
 
 				<!-- Six -->
