--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Special thanks to HTML5 UP
 							<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 							<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Vice President <a href="https://twitter.com/JoeBiden?ref_src=twsrc%5Etfw">@JoeBiden</a> tells it like it is—and he knows Ralph&#39;s the best guy for the job. <a href="https://t.co/4eqvPMOwtN">pic.twitter.com/4eqvPMOwtN</a></p>&mdash; Ralph Northam (@RalphNortham) <a href="https://twitter.com/RalphNortham/status/926110848178884608?ref_src=twsrc%5Etfw">November 2, 2017</a></blockquote>
 							<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-							<div class="index align-left">
+						</div>
 
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
