--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ Special thanks to HTML5 UP
 
 					<!-- Posts -->
 
-					<section class="banner style1 align-center onscroll-content-fade-in" id = "posts">
+					<section class="wrapper style1 align-center onscroll-content-fade-in" id = "posts">
 						<div class="inner">
 							<h2>Tweets</h2>
 							<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Take it from President <a href="https://twitter.com/BarackObama?ref_src=twsrc%5Etfw">@BarackObama</a>: Ralph&#39;s served Virginia his whole life. That&#39;s just who he is. <a href="https://t.co/dUeHQYPCUH">pic.twitter.com/dUeHQYPCUH</a></p>&mdash; Ralph Northam (@RalphNortham) <a href="https://twitter.com/RalphNortham/status/925825088167071744?ref_src=twsrc%5Etfw">November 1, 2017</a></blockquote>
