--- a/index.html
+++ b/index.html
@@ -248,12 +248,20 @@ Special thanks to HTML5 UP
 					<section class="wrapper style1 align-center onscroll-content-fade-in" id = "posts">
 						<div class="inner">
 							<h2>Tweets</h2>
-							<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Take it from President <a href="https://twitter.com/BarackObama?ref_src=twsrc%5Etfw">@BarackObama</a>: Ralph&#39;s served Virginia his whole life. That&#39;s just who he is. <a href="https://t.co/dUeHQYPCUH">pic.twitter.com/dUeHQYPCUH</a></p>&mdash; Ralph Northam (@RalphNortham) <a href="https://twitter.com/RalphNortham/status/925825088167071744?ref_src=twsrc%5Etfw">November 1, 2017</a></blockquote>
-							<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-							<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Do you know where you&#39;ll vote? Do you know when you&#39;ll head to the polls? Make a plan. <a href="https://t.co/9YPkNBX3Uz">https://t.co/9YPkNBX3Uz</a></p>&mdash; Ralph Northam (@RalphNortham) <a href="https://twitter.com/RalphNortham/status/926182582710079488?ref_src=twsrc%5Etfw">November 2, 2017</a></blockquote>
-							<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-							<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Vice President <a href="https://twitter.com/JoeBiden?ref_src=twsrc%5Etfw">@JoeBiden</a> tells it like it is—and he knows Ralph&#39;s the best guy for the job. <a href="https://t.co/4eqvPMOwtN">pic.twitter.com/4eqvPMOwtN</a></p>&mdash; Ralph Northam (@RalphNortham) <a href="https://twitter.com/RalphNortham/status/926110848178884608?ref_src=twsrc%5Etfw">November 2, 2017</a></blockquote>
-							<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+							<div class="items style1 medium onscroll-fade-in">
+								<section>
+									<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Take it from President <a href="https://twitter.com/BarackObama?ref_src=twsrc%5Etfw">@BarackObama</a>: Ralph&#39;s served Virginia his whole life. That&#39;s just who he is. <a href="https://t.co/dUeHQYPCUH">pic.twitter.com/dUeHQYPCUH</a></p>&mdash; Ralph Northam (@RalphNortham) <a href="https://twitter.com/RalphNortham/status/925825088167071744?ref_src=twsrc%5Etfw">November 1, 2017</a></blockquote>
+									<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+								</section>
+								<section>
+									<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Do you know where you&#39;ll vote? Do you know when you&#39;ll head to the polls? Make a plan. <a href="https://t.co/9YPkNBX3Uz">https://t.co/9YPkNBX3Uz</a></p>&mdash; Ralph Northam (@RalphNortham) <a href="https://twitter.com/RalphNortham/status/926182582710079488?ref_src=twsrc%5Etfw">November 2, 2017</a></blockquote>
+									<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+								</section>
+								<section>
+									<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Vice President <a href="https://twitter.com/JoeBiden?ref_src=twsrc%5Etfw">@JoeBiden</a> tells it like it is—and he knows Ralph&#39;s the best guy for the job. <a href="https://t.co/4eqvPMOwtN">pic.twitter.com/4eqvPMOwtN</a></p>&mdash; Ralph Northam (@RalphNortham) <a href="https://twitter.com/RalphNortham/status/926110848178884608?ref_src=twsrc%5Etfw">November 2, 2017</a></blockquote>
+									<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+								</section>										
+							</div>
 						</div>
 
 				<!-- Six -->
