--- a/index.html
+++ b/index.html
@@ -184,13 +184,10 @@ Special thanks to HTML5 UP
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://twitter.com/RalphNortham" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/ralph.northam" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 							</ul>
-							<p>&copy; EEFA. Designed by: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; EEFA. Cody Li and Ryan Haggerty Designed by: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
