--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Special thanks to HTML5 UP
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/ed-gillespie.jpg" alt="" />
 						</div>
 					</section>
 
@@ -68,7 +68,7 @@ Special thanks to HTML5 UP
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src="images/budget-cuts.jpeg" alt="" />
 						</div>
 					</section>
 				
@@ -83,7 +83,7 @@ Special thanks to HTML5 UP
 						</ul>
 					</div>
 					<div class="image">
-						<img src="images/spotlight02.jpg" alt="" />
+						<img src="images/ralph-northam.jpg" alt="" />
 					</div>
 				</section>
 
@@ -187,7 +187,7 @@ Special thanks to HTML5 UP
 								<li><a href="https://twitter.com/RalphNortham" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/ralph.northam" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
 							</ul>
-							<p>&copy; EEFA. Cody Li and Ryan Haggerty Designed by: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; EEFA. Cody Li and Ryan Haggerty. Designed by: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
